--- a/ReservaWiseRoom/TesteLayout/app/build.gradle
+++ b/ReservaWiseRoom/TesteLayout/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.applandeo:material-calendar-view:1.4.0'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.2'
 }
