--- a/ReservaWiseRoom/TesteLayout/app/src/main/AndroidManifest.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/icon_calendario"
+        android:icon="@drawable/icon_wise"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
